--- a/_pgbackup/style_1604931623.css
+++ b/_pgbackup/style_1604931623.css
@@ -377,7 +377,6 @@ button::after {
         overflow-y: visible !important;
         z-index: 99999;
         background-color: #eeeeee;
-        background-color: #eeeeee;
     }
 
     .contact-info-container {
@@ -469,9 +468,6 @@ a:focus {
     height: 100vh;
 }
 
-.slide2 li {
-}
-
 .slide2 .nav-link.active {
     border: none;
     background: none;
@@ -502,10 +498,10 @@ p,
 sub,
 li {
     font-family: Roboto;
-    font-size: 0.85rem;
+    font-size: 0.84rem;
     list-style: none;
+    text-align: justify;
 
-    /* text-align: justify */
     /* line-height: 1.6rem !important */
 }
 
@@ -743,7 +739,7 @@ label {
 @media only screen and (max-width: 991px) {
     .container1-md {
         width: 100%;
-        padding-top: 30vh;
+        padding-top: 40vh;
     }
 
     .navigation-md {
@@ -769,7 +765,7 @@ label {
 @media only screen and (max-width: 575px) {
     .height-sm {
         height: auto;
-        padding-top: 20vh;
+        padding-top: 10vh;
     }
 
     .fleche {
@@ -929,7 +925,7 @@ nav .nav-item::before {
 @media only screen and (min-width:991px)  {
     .barre-bas {
         height: 5vh;
-        position: fixed;
+        position: fixed !important;
         width: 100%;
         z-index: 99999;
     }
@@ -1058,7 +1054,7 @@ nav .nav-item::before {
 .slide2 p,
 .slide2 sub,
 .slide3 li {
-    font-size: 0.97em;
+    font-size: 0.98em;
     line-height: 1.8rem;
     font-weight: 500;
     letter-spacing: 1.2px;
@@ -1140,7 +1136,7 @@ nav .nav-item::before {
     .padding p,
     .padding sub,
     .padding li {
-        font-size: 0.8em !important;
+        font-size: 0.99em !important;
     }
 }
 
@@ -1231,5 +1227,17 @@ h2 {
 
     h1 {
         font-size: 1.5rem !important;
+    }
+}
+
+@media only screen and (min-width:980px) {
+    .heightMax {
+        min-height: 100vh;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .slide2 ul .nav-link {
+        font-size: 0.9em !important;
     }
 }
