--- a/_pgbackup/style_1604931766.css
+++ b/_pgbackup/style_1604931766.css
@@ -12,8 +12,8 @@ html {
 }
 
 html,
-body,
-main {
+body,
+main {
     width: 100%;
     height: 100%;
     color: #343a40;
@@ -28,8 +28,8 @@ main {
 }
 
 *,
-*::before,
-*::after {
+*::before,
+*::after {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
@@ -314,7 +314,7 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
     }
 
     nav .nav-link,
-    .nav-item {
+        .nav-item {
         color: #EAEAEA;
         font-weight: 500;
         padding: 2% 0 !important;
@@ -322,7 +322,7 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
     }
 
     nav .nav-link:hover ,
-    .nav-link:visited {
+        .nav-link:visited {
         color: #7395D9 !important;
         letter-spacing: 0.2rem;
     }
@@ -337,8 +337,8 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
 }
 
 input:active,
-input:hover,
-input:focus {
+input:hover,
+input:focus {
     background-color: none;
     background-color: none !important;
 }
@@ -353,8 +353,8 @@ input:focus {
 }
 
 button,
-button::before,
-button::after {
+button::before,
+button::after {
     border: none;
     margin: 0;
     padding: 0;
@@ -405,7 +405,7 @@ button::after {
 }
 
 .slide2 .titre-conteneur ul,
-.titre .col-lg-12 {
+.titre .col-lg-12 {
     opacity: 1;
     padding: 0.5em 0em;
     margin: 0;
@@ -414,8 +414,8 @@ button::after {
 }
 
 .slide2 .titre a::after,
-a::before,
-a:focus {
+a::before,
+a:focus {
     text-decoration: none;
 }
 
@@ -495,13 +495,13 @@ a:focus {
 /* reseau sociaux */
 /* TEXT DECO */
 p,
-sub,
-li {
+sub,
+li {
     font-family: Roboto;
-    font-size: 0.85rem;
+    font-size: 0.84rem;
     list-style: none;
+    text-align: justify;
 
-    /* text-align: justify */
     /* line-height: 1.6rem !important */
 }
 
@@ -535,8 +535,8 @@ span {
 
 /* a link */
 .case,
-.sous-case,
-.reponce {
+.sous-case,
+.reponce {
     width: 100%;
     font-size: 0.9em;
 }
@@ -739,7 +739,7 @@ label {
 @media only screen and (max-width: 991px) {
     .container1-md {
         width: 100%;
-        padding-top: 30vh;
+        padding-top: 40vh;
     }
 
     .navigation-md {
@@ -765,7 +765,7 @@ label {
 @media only screen and (max-width: 575px) {
     .height-sm {
         height: auto;
-        padding-top: 20vh;
+        padding-top: 10vh;
     }
 
     .fleche {
@@ -821,7 +821,7 @@ label {
 
 @media only screen and (min-width:575px) and (max-width:991px) {
     .slide2 .titre-conteneur ul,
-    .titre .col-lg-12 {
+        .titre .col-lg-12 {
         left: 10% !important;
     }
 
@@ -860,7 +860,7 @@ label {
 
 @media only screen and (min-width:991px) {
     .backgroud-menu-xs,
-    .contact-info-md {
+        .contact-info-md {
         /* background-color: rgba(35, 53, 89,0) !important */
         overflow-y: hidden !important;
         max-height: auto !important;
@@ -875,7 +875,7 @@ label {
 
 @media only screen and (max-width:575px) {
     .slide2 .titre-conteneur ul,
-    .titre .col-lg-12 {
+        .titre .col-lg-12 {
         font-size: 0.7rem !important;
         left: 0 !important;
     }
@@ -925,7 +925,7 @@ nav .nav-item::before {
 @media only screen and (min-width:991px)  {
     .barre-bas {
         height: 5vh;
-        position: fixed;
+        position: fixed !important;
         width: 100%;
         z-index: 99999;
     }
@@ -1052,9 +1052,9 @@ nav .nav-item::before {
 }
 
 .slide2 p,
-.slide2 sub,
-.slide3 li {
-    font-size: 0.97em;
+.slide2 sub,
+.slide3 li {
+    font-size: 0.98em;
     line-height: 1.8rem;
     font-weight: 500;
     letter-spacing: 1.2px;
@@ -1115,9 +1115,8 @@ nav .nav-item::before {
 
 @media only screen and (max-width:993px) and (min-width:980px) {
     p,
-    sub,
-    li {
-        /* font-size: em !important */
+        sub,
+        li {
         line-height: 1.8em !important;
     }
 }
@@ -1134,9 +1133,9 @@ nav .nav-item::before {
 
 @media only screen and (min-width:991px) and (max-width:1024px) {
     .padding p,
-    .padding sub,
-    .padding li {
-        font-size: 0.8em !important;
+        .padding sub,
+        .padding li {
+        font-size: 0.99em !important;
     }
 }
 
@@ -1233,5 +1232,11 @@ h2 {
 @media only screen and (min-width:980px) {
     .heightMax {
         min-height: 100vh;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .slide2 ul .nav-link {
+        font-size: 0.9em !important;
     }
 }
