--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ html {
 }
 
 html,
-body,
-main {
+body,
+main {
     width: 100%;
     height: 100%;
     color: #343a40;
@@ -28,8 +28,8 @@ main {
 }
 
 *,
-*::before,
-*::after {
+*::before,
+*::after {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
@@ -314,7 +314,7 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
     }
 
     nav .nav-link,
-    .nav-item {
+        .nav-item {
         color: #EAEAEA;
         font-weight: 500;
         padding: 2% 0 !important;
@@ -322,7 +322,7 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
     }
 
     nav .nav-link:hover ,
-    .nav-link:visited {
+        .nav-link:visited {
         color: #7395D9 !important;
         letter-spacing: 0.2rem;
     }
@@ -337,8 +337,8 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
 }
 
 input:active,
-input:hover,
-input:focus {
+input:hover,
+input:focus {
     background-color: none;
     background-color: none !important;
 }
@@ -353,8 +353,8 @@ input:focus {
 }
 
 button,
-button::before,
-button::after {
+button::before,
+button::after {
     border: none;
     margin: 0;
     padding: 0;
@@ -405,7 +405,7 @@ button::after {
 }
 
 .slide2 .titre-conteneur ul,
-.titre .col-lg-12 {
+.titre .col-lg-12 {
     opacity: 1;
     padding: 0.5em 0em;
     margin: 0;
@@ -414,8 +414,8 @@ button::after {
 }
 
 .slide2 .titre a::after,
-a::before,
-a:focus {
+a::before,
+a:focus {
     text-decoration: none;
 }
 
@@ -494,9 +494,9 @@ a:focus {
 
 /* reseau sociaux */
 /* TEXT DECO */
-p,
-sub,
-li {
+.col-info p,
+.col-info sub,
+.col-info li {
     font-family: Roboto;
     font-size: 0.84rem;
     list-style: none;
@@ -535,8 +535,8 @@ span {
 
 /* a link */
 .case,
-.sous-case,
-.reponce {
+.sous-case,
+.reponce {
     width: 100%;
     font-size: 0.9em;
 }
@@ -821,7 +821,7 @@ label {
 
 @media only screen and (min-width:575px) and (max-width:991px) {
     .slide2 .titre-conteneur ul,
-    .titre .col-lg-12 {
+        .titre .col-lg-12 {
         left: 10% !important;
     }
 
@@ -860,7 +860,7 @@ label {
 
 @media only screen and (min-width:991px) {
     .backgroud-menu-xs,
-    .contact-info-md {
+        .contact-info-md {
         /* background-color: rgba(35, 53, 89,0) !important */
         overflow-y: hidden !important;
         max-height: auto !important;
@@ -875,7 +875,7 @@ label {
 
 @media only screen and (max-width:575px) {
     .slide2 .titre-conteneur ul,
-    .titre .col-lg-12 {
+        .titre .col-lg-12 {
         font-size: 0.7rem !important;
         left: 0 !important;
     }
@@ -1052,8 +1052,8 @@ nav .nav-item::before {
 }
 
 .slide2 p,
-.slide2 sub,
-.slide3 li {
+.slide2 sub,
+.slide3 li {
     font-size: 0.98em;
     line-height: 1.8rem;
     font-weight: 500;
@@ -1115,9 +1115,8 @@ nav .nav-item::before {
 
 @media only screen and (max-width:993px) and (min-width:980px) {
     p,
-    sub,
-    li {
-        /* font-size: em !important */
+        sub,
+        li {
         line-height: 1.8em !important;
     }
 }
@@ -1134,8 +1133,8 @@ nav .nav-item::before {
 
 @media only screen and (min-width:991px) and (max-width:1024px) {
     .padding p,
-    .padding sub,
-    .padding li {
+        .padding sub,
+        .padding li {
         font-size: 0.99em !important;
     }
 }
