--- a/style.css
+++ b/style.css
@@ -1054,7 +1054,7 @@ nav .nav-item::before {
 .slide2 p,
 .slide2 sub,
 .slide3 li {
-    font-size: 0.98em;
+    font-size: 0.97em;
     line-height: 1.8rem;
     font-weight: 500;
     letter-spacing: 1.2px;
@@ -1064,6 +1064,7 @@ nav .nav-item::before {
     font-family: 'Roboto', sans-serif;
     text-transform: lowercase;
     margin: 11px 0;
+    text-align: justify;
 }
 
 .slide2 ul .nav-link {
