--- a/style.css
+++ b/style.css
@@ -1054,7 +1054,7 @@ nav .nav-item::before {
 .slide2 p,
 .slide2 sub,
 .slide3 li {
-    font-size: 0.97em;
+    /* font-size: 0.97em */
     line-height: 1.8rem;
     font-weight: 500;
     letter-spacing: 1.2px;
