--- a/_pgbackup/style_1604942007.css
+++ b/_pgbackup/style_1604942007.css
@@ -400,14 +400,14 @@ button::after {
 
 .slide2 .titre-conteneur {
     left: 0;
-    padding: 0;
-    margin: 0;
+    padding: auto;
+    margin: auto;
 }
 
 .slide2 .titre-conteneur ul,
 .titre .col-lg-12 {
     opacity: 1;
-    padding: 0.5em 0em;
+    padding: 0.7em 0em;
     margin: 0;
     width: 100%;
     color: #EAEAEA;
@@ -443,6 +443,7 @@ a:focus {
     -ms-flex-direction: row;
     flex-direction: row;
     width: 100%;
+    left: 0;
     cursor: pointer;
 }
 
@@ -472,8 +473,7 @@ a:focus {
     border: none;
     background: none;
     color: #fff;
-
-    /* left: 10px */
+    left: 0;
     opacity: 1;
     animation-duration: 1s;
 }
@@ -494,7 +494,7 @@ a:focus {
 
 /* reseau sociaux */
 /* TEXT DECO */
-p,
+/* p,
 sub,
 li {
     font-family: Roboto;
@@ -502,9 +502,8 @@ li {
     list-style: none;
     text-align: justify;
 
-    /* line-height: 1.6rem !important */
-}
-
+    ||*| line-height: 1.6rem !important |*||
+} */
 strong {
     font-family: Roboto Condensed;
     text-align: left;
@@ -574,10 +573,9 @@ label {
     background-size: contain;
 }
 
-.main a:link {
+/* .main a:link {
     color: #0D4097;
-}
-
+} */
 .main a:visited {
     color: #002EA5;
     background-color: transparent;
@@ -598,7 +596,8 @@ label {
 
 .nav-item a:link {
     color: #fff;
-    left: 18px;
+    font-size: 0.95em;
+    letter-spacing: 2px;
     background-color: transparent;
     text-decoration: none;
 }
@@ -863,6 +862,7 @@ label {
     .contact-info-md {
         /* background-color: rgba(35, 53, 89,0) !important */
         overflow-y: hidden !important;
+        overflow-x: inherit;
         max-height: auto !important;
         max-height: inherit !important;
     }
@@ -925,15 +925,15 @@ nav .nav-item::before {
 @media only screen and (min-width:991px)  {
     .barre-bas {
         height: 5vh;
-        position: fixed;
+        position: fixed !important;
         width: 100%;
         z-index: 99999;
     }
 }
 
 .col-info {
-    border-left: 3px solid #EAEAEA;
-    padding-left: 0.7rem;
+    border-left: 4px solid #EAEAEA;
+    padding-left: 0.6rem;
 }
 
 @media only screen and (min-width:991px) {
@@ -1052,192 +1052,204 @@ nav .nav-item::before {
 }
 
 .slide2 p,
-.slide2 sub,
+HEAD.slide2 sub,
 .slide3 li {
-    font-size: 0.98em;
-    line-height: 1.8rem;
-    font-weight: 500;
-    letter-spacing: 1.2px;
+    font-size: 0.97em;
+        font-weight: 500;
+        letter-spacing: 1.2px;
 
-    /* padding-bottom: 0 */
-    color: #262626 !important;
-    font-family: 'Roboto', sans-serif;
-    text-transform: lowercase;
-    margin: 11px 0;
-}
-
-.slide2 ul .nav-link {
-    letter-spacing: 0.3rem;
-    font-weight: 700;
-    left: 0px;
-    opacity: 0.7;
-    font-size: 1em;
-    font-size: 0.9rem;
-}
-
-.slide2 .nav-link.active:hover {
-}
-
-.slide2 .nav-link:hover {
-    left: 0;
-    position: static;
-}
-
-@media only screen and (max-width:990px) {
-    .paddingBotton {
-        padding-bottom: 5rem;
+        /* padding-bottom: 0 */
+        color: #262626 !important;
+        font-family: 'Roboto', sans-serif;
+        text-transform: lowercase;
+        margin: 11px 0;
     }
 
-    .slide2 .conteneur_para {
-        min-width: 75%;
-    }
-
-    .columnFleche {
-        padding: 4.2% 0;
-    }
-}
-
-.slide2 .main li a {
-    font-size: 0.9rem;
-}
-
-@media only screen and (max-width:985px) {
-    .padding {
-        padding-bottom: 6rem !important;
-    }
-}
-
-@media only screen and (max-width:991px) {
-    .col-info p {
-        letter-spacing: 1.5px;
-    }
-}
-
-@media only screen and (max-width:993px) and (min-width:980px) {
-    p,
-    sub,
-    li {
-        /* font-size: em !important */
-        line-height: 1.8em !important;
-    }
-}
-
-.tab-pane li {
-    padding-bottom: 1rem;
-}
-
-@media only screen and (min-width:991px) {
-    .padding {
-        max-height: 85vh;
-    }
-}
-
-@media only screen and (min-width:991px) and (max-width:1024px) {
-    .padding p,
-    .padding sub,
-    .padding li {
-        font-size: 0.99em !important;
-    }
-}
-
-@media only screen and (min-width:1024px) {
-    .marginLeft {
-        margin-left: 2rem;
-    }
-}
-
-@media only screen and (min-width:991px) {
-    .container-fluid {
-        max-height: 100vh !important;
-    }
-}
-
-@media only screen and (max-width:420px) {
-    .reseau-sm {
-        max-width: 80%;
-        left: -2rem;
-    }
-}
-
-@media only screen and (max-width:551px) {
-    .columnFleche {
-        padding: 2% 0;
-        width: 2.5rem;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    }
-
-    .careau-reseau {
-        width: 1rem;
-    }
-
-    .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
-    }
-
-    .logo-image {
-        width: 30px;
-    }
-}
-
-h2 {
-    color: #4a4e51;
-    font-size: 1.7em;
-    font-weight: 800;
-    letter-spacing: 2px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-@media only screen and (min-width:1324px) {
-    .container-fluid {
-        background: linear-gradient(90deg, #233559 23%, #eeeeee 23%);
-    }
-}
-
-@media only screen and (max-width:979px) {
-    .padding p {
-        max-width: 80% !important;
-    }
-
-    .hvr-forward img {
-        width: 100% !important;
-        align-items: left !important;
-    }
-}
-
-@media only screen and (max-width:310px) {
-    .container1-md {
-        padding-top: 8rem;
-    }
-}
-
-@media only screen and (max-width:300px) {
-    h3 {
-        font-size: 0.7em;
-        left: 0 !important;
-        letter-spacing: 0;
-    }
-
-    p {
-        font-size: 0.7em !important;
-        line-height: 1.2rem !important;
-        left: 0 !important;
-    }
-
-    h1 {
-        font-size: 1.5rem !important;
-    }
-}
-
-@media only screen and (min-width:980px) {
-    .heightMax {
-        min-height: 100vh;
-    }
-}
-
-@media only screen and (max-width:1200px) {
     .slide2 ul .nav-link {
-        font-size: 0.9em !important;
+        letter-spacing: 0.3rem;
+        font-weight: 700;
+        left: 0px;
+        opacity: 0.7;
+        font-size: 1em;
+        font-size: 0.9rem;
     }
+
+    .slide2 .nav-link.active:hover {
+    }
+
+    .slide2 .nav-link:hover {
+        left: 0;
+        position: static;
+    }
+
+    @media only screen and (max-width:990px) {
+        .paddingBotton {
+            padding-bottom: 5rem;
+        }
+
+        .slide2 .conteneur_para {
+            min-width: 75%;
+        }
+
+        .columnFleche {
+            padding: 4.2% 0;
+        }
+    }
+
+    .slide2 .main li a {
+        font-size: 0.9rem;
+    }
+
+    @media only screen and (max-width:985px) {
+        .padding {
+            padding-bottom: 6rem !important;
+        }
+    }
+
+    @media only screen and (max-width:991px) {
+        .col-info p {
+            letter-spacing: 1.5px;
+        }
+    }
+
+    @media only screen and (max-width:993px) and (min-width:980px) {
+        p,
+        sub,
+        li {
+            /* font-size: em !important */
+            line-height: 1.8em !important;
+        }
+    }
+
+    .tab-pane li {
+        padding-bottom: 1rem;
+    }
+
+    @media only screen and (min-width:991px) {
+        .padding {
+            max-height: 85vh;
+        }
+    }
+
+    @media only screen and (min-width:991px) and (max-width:1024px) {
+        .padding p,
+        .padding sub,
+        .padding li {
+            font-size: 0.99em !important;
+        }
+    }
+
+    @media only screen and (min-width:1024px) {
+        .marginLeft {
+            margin-left: 2rem;
+        }
+    }
+
+    @media only screen and (min-width:991px) {
+        .container-fluid {
+            max-height: 100vh !important;
+        }
+    }
+
+    @media only screen and (max-width:420px) {
+        .reseau-sm {
+            max-width: 80%;
+            left: -2rem;
+        }
+    }
+
+    @media only screen and (max-width:551px) {
+        .columnFleche {
+            padding: 2% 0;
+            width: 2.5rem;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+        }
+
+        .careau-reseau {
+            width: 1rem;
+        }
+
+        .backgroundMobile {
+            background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
+        }
+
+        .logo-image {
+            width: 30px;
+        }
+    }
+
+    h2 {
+        color: #4a4e51;
+        font-size: 1.7em;
+        font-weight: 800;
+        letter-spacing: 2px;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    @media only screen and (min-width:1324px) {
+        .container-fluid {
+            background: linear-gradient(90deg, #233559 23%, #eeeeee 23%);
+        }
+    }
+
+    @media only screen and (max-width:979px) {
+        .padding p {
+            max-width: 80% !important;
+        }
+
+        .hvr-forward img {
+            width: 100% !important;
+            align-items: left !important;
+        }
+    }
+
+    @media only screen and (max-width:310px) {
+        .container1-md {
+            padding-top: 8rem;
+        }
+    }
+
+    @media only screen and (max-width:300px) {
+        h3 {
+            font-size: 0.7em;
+            left: 0 !important;
+            letter-spacing: 0;
+        }
+
+        p {
+            font-size: 0.7em !important;
+            line-height: 1.2rem !important;
+            left: 0 !important;
+        }
+
+        h1 {
+            font-size: 1.5rem !important;
+        }
+    }
+
+    @media only screen and (min-width:980px) {
+        .heightMax {
+            min-height: 100vh;
+        }
+    }
+
+    @media only screen and (max-width:1200px) {
+        .slide2 ul .nav-link {
+            font-size: 0.9em !important;
+        }
+    }
+
+
+a {
+    color: #002EA5;
+}
+
+.slide2 p {
+    font-size: 0.95em;
+    line-height: 25px;
+    font-family: roboto;
+    letter-spacing: 2px;
+    text-align: justify;
 }
