--- a/_pgbackup/style_1604944796.css
+++ b/_pgbackup/style_1604944796.css
@@ -400,6 +400,7 @@ button::after {
 
 .slide2 .titre-conteneur {
     left: 0;
+    max-height: 90vh;
     padding: auto;
     margin: auto;
 }
@@ -860,10 +861,10 @@ label {
 @media only screen and (min-width:991px) {
     .backgroud-menu-xs,
     .contact-info-md {
-        /* background-color: rgba(35, 53, 89,0) !important */
         overflow-y: hidden !important;
         overflow-x: inherit;
-        max-height: auto !important;
+
+        /* max-height: auto !important */
         max-height: inherit !important;
     }
 }
@@ -940,7 +941,11 @@ nav .nav-item::before {
     .container1-md {
         position: relative !important;
         height: 100vh;
+        display: flex !important;
         width: 100%;
+        align-items: flex-end;
+        justify-content: flex-end;
+        flex-direction: row;
     }
 
     -fixed -lg {
@@ -1055,192 +1060,192 @@ nav .nav-item::before {
 HEAD.slide2 sub,
 .slide3 li {
     font-size: 0.97em;
-        font-weight: 500;
-        letter-spacing: 1.2px;
+    font-weight: 500;
+    letter-spacing: 1.2px;
 
-        /* padding-bottom: 0 */
-        color: #262626 !important;
-        font-family: 'Roboto', sans-serif;
-        text-transform: lowercase;
-        margin: 11px 0;
+    /* padding-bottom: 0 */
+    color: #262626 !important;
+    font-family: 'Roboto', sans-serif;
+    text-transform: lowercase;
+    margin: 11px 0;
+}
+
+.slide2 ul .nav-link {
+    letter-spacing: 0.3rem;
+    font-weight: 700;
+    left: 0px;
+    opacity: 0.7;
+    font-size: 1em;
+    font-size: 0.9rem;
+}
+
+.slide2 .nav-link.active:hover {
+}
+
+.slide2 .nav-link:hover {
+    left: 0;
+    position: static;
+}
+
+@media only screen and (max-width:990px) {
+    .paddingBotton {
+        padding-bottom: 5rem;
     }
 
+    .slide2 .conteneur_para {
+        min-width: 75%;
+    }
+
+    .columnFleche {
+        padding: 4.2% 0;
+    }
+}
+
+.slide2 .main li a {
+    font-size: 0.9rem;
+}
+
+@media only screen and (max-width:985px) {
+    .padding {
+        padding-top: 6rem !important;
+        padding-bottom: 6rem !important;
+    }
+}
+
+@media only screen and (max-width:991px) {
+    .col-info p {
+        letter-spacing: 1.5px;
+    }
+}
+
+@media only screen and (max-width:993px) and (min-width:980px) {
+    p,
+    sub,
+    li {
+        /* font-size: em !important */
+        line-height: 1.8em !important;
+    }
+}
+
+.tab-pane li {
+    padding-bottom: 1rem;
+}
+
+@media only screen and (min-width:991px) {
+    .padding {
+        max-height: 85vh;
+    }
+}
+
+@media only screen and (min-width:991px) and (max-width:1024px) {
+    .padding p,
+    .padding sub,
+    .padding li {
+        font-size: 0.87em !important;
+    }
+}
+
+@media only screen and (min-width:1024px) {
+    .marginLeft {
+        margin-left: 2rem;
+    }
+}
+
+@media only screen and (min-width:991px) {
+    .container-fluid {
+        max-height: 100vh !important;
+    }
+}
+
+@media only screen and (max-width:420px) {
+    .reseau-sm {
+        max-width: 80%;
+        left: -2rem;
+    }
+}
+
+@media only screen and (max-width:551px) {
+    .columnFleche {
+        padding: 2% 0;
+        width: 2.5rem;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+
+    .careau-reseau {
+        width: 1rem;
+    }
+
+    .backgroundMobile {
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
+    }
+
+    .logo-image {
+        width: 30px;
+    }
+}
+
+h2 {
+    color: #4a4e51;
+    font-size: 1.7em;
+    font-weight: 800;
+    letter-spacing: 2px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+@media only screen and (min-width:1324px) {
+    .container-fluid {
+        background: linear-gradient(90deg, #233559 23%, #eeeeee 23%);
+    }
+}
+
+@media only screen and (max-width:979px) {
+    .padding p {
+        max-width: 80% !important;
+    }
+
+    .hvr-forward img {
+        width: 100% !important;
+        align-items: left !important;
+    }
+}
+
+@media only screen and (max-width:310px) {
+    .container1-md {
+        padding-top: 8rem;
+    }
+}
+
+@media only screen and (max-width:300px) {
+    h3 {
+        font-size: 0.7em;
+        left: 0 !important;
+        letter-spacing: 0;
+    }
+
+    p {
+        font-size: 0.7em !important;
+        line-height: 1.2rem !important;
+        left: 0 !important;
+    }
+
+    h1 {
+        font-size: 1.5rem !important;
+    }
+}
+
+@media only screen and (min-width:980px) {
+    .heightMax {
+        min-height: 100vh;
+    }
+}
+
+@media only screen and (max-width:1200px) {
     .slide2 ul .nav-link {
-        letter-spacing: 0.3rem;
-        font-weight: 700;
-        left: 0px;
-        opacity: 0.7;
-        font-size: 1em;
-        font-size: 0.9rem;
+        font-size: 0.9em !important;
     }
-
-    .slide2 .nav-link.active:hover {
-    }
-
-    .slide2 .nav-link:hover {
-        left: 0;
-        position: static;
-    }
-
-    @media only screen and (max-width:990px) {
-        .paddingBotton {
-            padding-bottom: 5rem;
-        }
-
-        .slide2 .conteneur_para {
-            min-width: 75%;
-        }
-
-        .columnFleche {
-            padding: 4.2% 0;
-        }
-    }
-
-    .slide2 .main li a {
-        font-size: 0.9rem;
-    }
-
-    @media only screen and (max-width:985px) {
-        .padding {
-            padding-bottom: 6rem !important;
-        }
-    }
-
-    @media only screen and (max-width:991px) {
-        .col-info p {
-            letter-spacing: 1.5px;
-        }
-    }
-
-    @media only screen and (max-width:993px) and (min-width:980px) {
-        p,
-        sub,
-        li {
-            /* font-size: em !important */
-            line-height: 1.8em !important;
-        }
-    }
-
-    .tab-pane li {
-        padding-bottom: 1rem;
-    }
-
-    @media only screen and (min-width:991px) {
-        .padding {
-            max-height: 85vh;
-        }
-    }
-
-    @media only screen and (min-width:991px) and (max-width:1024px) {
-        .padding p,
-        .padding sub,
-        .padding li {
-            font-size: 0.99em !important;
-        }
-    }
-
-    @media only screen and (min-width:1024px) {
-        .marginLeft {
-            margin-left: 2rem;
-        }
-    }
-
-    @media only screen and (min-width:991px) {
-        .container-fluid {
-            max-height: 100vh !important;
-        }
-    }
-
-    @media only screen and (max-width:420px) {
-        .reseau-sm {
-            max-width: 80%;
-            left: -2rem;
-        }
-    }
-
-    @media only screen and (max-width:551px) {
-        .columnFleche {
-            padding: 2% 0;
-            width: 2.5rem;
-            align-items: center;
-            justify-content: center;
-            display: flex;
-        }
-
-        .careau-reseau {
-            width: 1rem;
-        }
-
-        .backgroundMobile {
-            background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
-        }
-
-        .logo-image {
-            width: 30px;
-        }
-    }
-
-    h2 {
-        color: #4a4e51;
-        font-size: 1.7em;
-        font-weight: 800;
-        letter-spacing: 2px;
-        font-family: 'Open Sans', sans-serif;
-    }
-
-    @media only screen and (min-width:1324px) {
-        .container-fluid {
-            background: linear-gradient(90deg, #233559 23%, #eeeeee 23%);
-        }
-    }
-
-    @media only screen and (max-width:979px) {
-        .padding p {
-            max-width: 80% !important;
-        }
-
-        .hvr-forward img {
-            width: 100% !important;
-            align-items: left !important;
-        }
-    }
-
-    @media only screen and (max-width:310px) {
-        .container1-md {
-            padding-top: 8rem;
-        }
-    }
-
-    @media only screen and (max-width:300px) {
-        h3 {
-            font-size: 0.7em;
-            left: 0 !important;
-            letter-spacing: 0;
-        }
-
-        p {
-            font-size: 0.7em !important;
-            line-height: 1.2rem !important;
-            left: 0 !important;
-        }
-
-        h1 {
-            font-size: 1.5rem !important;
-        }
-    }
-
-    @media only screen and (min-width:980px) {
-        .heightMax {
-            min-height: 100vh;
-        }
-    }
-
-    @media only screen and (max-width:1200px) {
-        .slide2 ul .nav-link {
-            font-size: 0.9em !important;
-        }
-    }
-
+}
 
 a {
     color: #002EA5;
@@ -1252,4 +1257,18 @@ a {
     font-family: roboto;
     letter-spacing: 2px;
     text-align: justify;
+}
+
+@media only screen and (max-width:1299px) {
+    .cadreImage {
+        min-height: 60vh;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    cadreImage {
+        min-height: 85vh !important;
+    }
 }
