--- a/_pgbackup/style_1604945337.css
+++ b/_pgbackup/style_1604945337.css
@@ -941,7 +941,11 @@ nav .nav-item::before {
     .container1-md {
         position: relative !important;
         height: 100vh;
+        display: flex !important;
         width: 100%;
+        align-items: flex-end;
+        justify-content: flex-end;
+        flex-direction: row;
     }
 
     -fixed -lg {
@@ -1103,7 +1107,7 @@ HEAD.slide2 sub,
 
 @media only screen and (max-width:985px) {
     .padding {
-        padding-bottom: 6rem !important;
+        padding: 6rem 0 6rem 0 !important;
     }
 }
 
@@ -1201,7 +1205,7 @@ h2 {
     }
 
     .hvr-forward img {
-        width: 100% !important;
+        width: 80% !important;
         align-items: left !important;
     }
 }
@@ -1252,4 +1256,18 @@ a {
     font-family: roboto;
     letter-spacing: 2px;
     text-align: justify;
+}
+
+@media only screen and (max-width:1299px) {
+    .cadreImage {
+        min-height: 60vh;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    cadreImage {
+        min-height: 85vh !important;
+    }
 }
