--- a/_pgbackup/style_1604945380.css
+++ b/_pgbackup/style_1604945380.css
@@ -516,7 +516,7 @@ em {
     font-style: normal;
 
     /* letter-spacing: 1.6px */
-    text-transform: capitalize;
+    /* text-transform: capitalize */
 }
 
 mark {
@@ -941,7 +941,11 @@ nav .nav-item::before {
     .container1-md {
         position: relative !important;
         height: 100vh;
+        display: flex !important;
         width: 100%;
+        align-items: flex-end;
+        justify-content: flex-end;
+        flex-direction: row;
     }
 
     -fixed -lg {
@@ -1062,7 +1066,6 @@ HEAD.slide2 sub,
     /* padding-bottom: 0 */
     color: #262626 !important;
     font-family: 'Roboto', sans-serif;
-    text-transform: lowercase;
     margin: 11px 0;
 }
 
@@ -1103,7 +1106,7 @@ HEAD.slide2 sub,
 
 @media only screen and (max-width:985px) {
     .padding {
-        padding-bottom: 6rem !important;
+        padding: 6rem 0 6rem 0 !important;
     }
 }
 
@@ -1136,7 +1139,7 @@ HEAD.slide2 sub,
     .padding p,
     .padding sub,
     .padding li {
-        font-size: 0.91em !important;
+        font-size: 0.87em !important;
     }
 }
 
@@ -1201,7 +1204,7 @@ h2 {
     }
 
     .hvr-forward img {
-        width: 100% !important;
+        width: 80% !important;
         align-items: left !important;
     }
 }
@@ -1252,4 +1255,18 @@ a {
     font-family: roboto;
     letter-spacing: 2px;
     text-align: justify;
+}
+
+@media only screen and (max-width:1299px) {
+    .cadreImage {
+        min-height: 60vh;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    cadreImage {
+        min-height: 85vh !important;
+    }
 }
