--- a/style.css
+++ b/style.css
@@ -741,7 +741,7 @@ label {
 @media only screen and (max-width: 991px) {
     .container1-md {
         width: 100%;
-        padding-top: 40vh;
+        padding-top: 20vh;
     }
 
     .navigation-md {
@@ -774,7 +774,8 @@ label {
     .fleche {
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex;
+
+        /* display: flex */
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         justify-content: center !important;
@@ -806,7 +807,7 @@ label {
     }
 
     .add-mini {
-        padding: 5% 0;
+        padding: 15% 0 5% 0;
     }
 }
 
@@ -826,6 +827,7 @@ label {
     .slide2 .titre-conteneur ul,
     .titre .col-lg-12 {
         left: 10% !important;
+        padding-right: 10% !important;
     }
 
     /* .marge-md {
@@ -848,7 +850,7 @@ label {
 
 @media only screen and (max-width:991px) {
     .marge-md {
-        min-height: 40%;
+        max-height: 40rem !important;
         padding: 20rem 0rem 5rem 0rem !important;
         background-color: #233559;
         padding-bottom: 1rem;
@@ -943,11 +945,11 @@ nav .nav-item::before {
 @media only screen and (min-width:991px) {
     .container1-md {
         position: relative !important;
-        height: 100vh;
+        height: 100vh !important;
         display: flex !important;
         width: 100%;
-        align-items: flex-end;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
         flex-direction: row;
     }
 
@@ -1001,7 +1003,7 @@ nav .nav-item::before {
 
 @media only screen and (max-width:991px) {
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 40rem, #eeeeee 40rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 35rem, #eeeeee 35rem);
         background-color: #eeeeee;
         min-height: auto;
     }
@@ -1100,7 +1102,7 @@ HEAD.slide2 sub,
     }
 
     .columnFleche {
-        padding: 4.2% 0;
+        /* padding: 4.2% 0 */
     }
 }
 
@@ -1180,7 +1182,7 @@ HEAD.slide2 sub,
     }
 
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 26rem, #eeeeee 26rem);
     }
 
     .logo-image {
@@ -1250,6 +1252,7 @@ h2 {
 }
 
 a {
+    cursor: pointer;
     color: #002EA5;
 }
 
