--- a/style.css
+++ b/style.css
@@ -741,7 +741,7 @@ label {
 @media only screen and (max-width: 991px) {
     .container1-md {
         width: 100%;
-        padding-top: 20vh;
+        padding-top: 40vh;
     }
 
     .navigation-md {
@@ -844,6 +844,7 @@ label {
     .bg-xs-menu {
         background-color: #233559;
         padding-left: 2rem !important;
+        padding-right: 2rem !important;
         font-size: 0.9rem !important;
     }
 }
