--- a/_pgbackup/style_1604950636.css
+++ b/_pgbackup/style_1604950636.css
@@ -365,7 +365,8 @@ button::after {
 @media screen and (max-width: 991px) {
     .container-fluid {
         background: #eeeeee !important;
-        overflow: visible;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
         height: auto;
         min-height: inherit;
     }
@@ -374,7 +375,8 @@ button::after {
         /* left: 0 !important */
         min-height: auto;
         padding: 10vh 0 10vh 0;
-        overflow-y: visible !important;
+        overflow-y: scroll !important;
+        -webkit-overflow-scrolling: touch;
         z-index: 99999;
         background-color: #eeeeee;
     }
@@ -516,7 +518,7 @@ em {
     font-style: normal;
 
     /* letter-spacing: 1.6px */
-    text-transform: capitalize;
+    /* text-transform: capitalize */
 }
 
 mark {
@@ -757,6 +759,7 @@ label {
         -ms-flex-align: end;
         align-items: flex-end;
         overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
         height: 100%;
         background-color: #eeeeee;
     }
@@ -771,7 +774,8 @@ label {
     .fleche {
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex;
+
+        /* display: flex */
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         justify-content: center !important;
@@ -803,7 +807,7 @@ label {
     }
 
     .add-mini {
-        padding: 5% 0;
+        padding: 15% 0 5% 0;
     }
 }
 
@@ -823,6 +827,7 @@ label {
     .slide2 .titre-conteneur ul,
     .titre .col-lg-12 {
         left: 10% !important;
+        padding-right: 10% !important;
     }
 
     /* .marge-md {
@@ -839,13 +844,14 @@ label {
     .bg-xs-menu {
         background-color: #233559;
         padding-left: 2rem !important;
+        padding-right: 2rem !important;
         font-size: 0.9rem !important;
     }
 }
 
 @media only screen and (max-width:991px) {
     .marge-md {
-        min-height: 40%;
+        max-height: 40rem !important;
         padding: 20rem 0rem 5rem 0rem !important;
         background-color: #233559;
         padding-bottom: 1rem;
@@ -940,11 +946,11 @@ nav .nav-item::before {
 @media only screen and (min-width:991px) {
     .container1-md {
         position: relative !important;
-        height: 100vh;
+        height: 100vh !important;
         display: flex !important;
         width: 100%;
-        align-items: flex-end;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
         flex-direction: row;
     }
 
@@ -998,7 +1004,7 @@ nav .nav-item::before {
 
 @media only screen and (max-width:991px) {
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 40rem, #eeeeee 40rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 35rem, #eeeeee 35rem);
         background-color: #eeeeee;
         min-height: auto;
     }
@@ -1008,9 +1014,10 @@ nav .nav-item::before {
     .contentBoxParagraphe {
         max-height: 100vh;
         min-height: 90vh;
-        padding: 5rem 0rem;
+        padding: 5rem 0;
         padding-left: 5rem;
         overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
         margin-right: 0;
     }
 }
@@ -1066,7 +1073,6 @@ HEAD.slide2 sub,
     /* padding-bottom: 0 */
     color: #262626 !important;
     font-family: 'Roboto', sans-serif;
-    text-transform: lowercase;
     margin: 11px 0;
 }
 
@@ -1097,7 +1103,7 @@ HEAD.slide2 sub,
     }
 
     .columnFleche {
-        padding: 4.2% 0;
+        /* padding: 4.2% 0 */
     }
 }
 
@@ -1107,8 +1113,7 @@ HEAD.slide2 sub,
 
 @media only screen and (max-width:985px) {
     .padding {
-        padding-top: 6rem !important;
-        padding-bottom: 6rem !important;
+        padding: 6rem 0 6rem 0 !important;
     }
 }
 
@@ -1178,7 +1183,7 @@ HEAD.slide2 sub,
     }
 
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 26rem, #eeeeee 26rem);
     }
 
     .logo-image {
@@ -1248,6 +1253,7 @@ h2 {
 }
 
 a {
+    cursor: pointer;
     color: #002EA5;
 }
 
@@ -1257,12 +1263,14 @@ a {
     font-family: roboto;
     letter-spacing: 2px;
     text-align: justify;
+    font-weight: 400;
 }
 
-@media only screen and (max-width:1299px) {
+@media only screen and (max-width:1299px) and (min-width:1023px) {
     .cadreImage {
         min-height: 60vh;
         display: flex;
+        padding-bottom: 1vh;
         align-items: flex-end;
     }
 }
@@ -1270,5 +1278,13 @@ a {
 @media only screen and (max-width:1200px) {
     cadreImage {
         min-height: 85vh !important;
+    }
+}
+
+@media only screen and (max-width:1023px) {
+    .cadreImage {
+        display: flex;
+        min-height: 40vh;
+        align-items: flex-end;
     }
 }
