--- a/style.css
+++ b/style.css
@@ -357,8 +357,10 @@ button::before,
 button::after {
     border: none;
     margin: 0;
+    background-color: #233559;
     padding: 0;
-    background-color: #eeeeee;
+
+    /* background-color: #eeeeee */
 }
 
 /* header + menu RESPONSIVE */
@@ -972,9 +974,8 @@ nav .nav-item::before {
 }
 
 .columnFleche {
-    padding: 3.2% 0rem;
     width: 4.6rem;
-    height: 4rem;
+    height: 6rem;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
     border-color: #fff;
@@ -1211,7 +1212,7 @@ h2 {
     }
 
     .hvr-forward img {
-        width: 80% !important;
+        width: 90% !important;
         align-items: left !important;
     }
 }
