--- a/style.css
+++ b/style.css
@@ -760,8 +760,8 @@ label {
         -webkit-box-align: end;
         -ms-flex-align: end;
         align-items: flex-end;
-        overflow-y: scroll;
-        -webkit-overflow-scrolling: touch;
+        overflow-y: scroll !important;
+        -webkit-overflow-scrolling: touch !important;
         height: 100%;
         background-color: #eeeeee;
     }
