--- a/style.css
+++ b/style.css
@@ -974,7 +974,7 @@ nav .nav-item::before {
 }
 
 .columnFleche {
-    width: 4.6rem;
+    width: 100%;
     height: 6rem;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
@@ -1025,8 +1025,8 @@ nav .nav-item::before {
 
 @media only screen and (max-width:991px) {
     .barre-bas {
-        bottom: 30px !important;
-        margin-bottom: 3rem;
+        /* bottom: 30px !important */
+        /* margin-bottom: 3rem */
     }
 
     contentOverflow {
@@ -1104,6 +1104,11 @@ HEAD.slide2 sub,
     }
 
     .columnFleche {
+        /* width: 100vw */
+        height: 4rem;
+        border-style: solid;
+        border-width: 0 1px 0 0;
+
         /* padding: 4.2% 0 */
     }
 }
@@ -1172,8 +1177,7 @@ HEAD.slide2 sub,
 
 @media only screen and (max-width:551px) {
     .columnFleche {
-        padding: 2% 0;
-        width: 2.5rem;
+        /* width: 2.5rem */
         align-items: center;
         justify-content: center;
         display: flex;
@@ -1208,7 +1212,7 @@ h2 {
 
 @media only screen and (max-width:979px) {
     .padding p {
-        max-width: 80% !important;
+        max-width: 95% !important;
     }
 
     .hvr-forward img {
@@ -1287,5 +1291,13 @@ a {
         display: flex;
         min-height: 40vh;
         align-items: flex-end;
+    }
+}
+
+@media only screen and (max-width:992px) {
+    .slide2 p,
+    HEAD.slide2 sub,
+    .slide3 li {
+        line-height: 1.7em;
     }
 }
