--- a/_pgbackup/style_1604955799.css
+++ b/_pgbackup/style_1604955799.css
@@ -317,7 +317,7 @@ nav .nav-list .nav-item:nth-child(3) .nav-link {
     .nav-item {
         color: #EAEAEA;
         font-weight: 500;
-        padding: 2% 0 !important;
+        padding: 2% 1% !important;
         cursor: pointer;
     }
 
@@ -357,8 +357,10 @@ button::before,
 button::after {
     border: none;
     margin: 0;
+    background-color: #233559;
     padding: 0;
-    background-color: #eeeeee;
+
+    /* background-color: #eeeeee */
 }
 
 /* header + menu RESPONSIVE */
@@ -758,8 +760,8 @@ label {
         -webkit-box-align: end;
         -ms-flex-align: end;
         align-items: flex-end;
-        overflow-y: scroll;
-        -webkit-overflow-scrolling: touch;
+        overflow-y: scroll !important;
+        -webkit-overflow-scrolling: touch !important;
         height: 100%;
         background-color: #eeeeee;
     }
@@ -774,7 +776,8 @@ label {
     .fleche {
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex;
+
+        /* display: flex */
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         justify-content: center !important;
@@ -806,7 +809,7 @@ label {
     }
 
     .add-mini {
-        padding: 5% 0;
+        padding: 15% 0 5% 0;
     }
 }
 
@@ -826,6 +829,7 @@ label {
     .slide2 .titre-conteneur ul,
     .titre .col-lg-12 {
         left: 10% !important;
+        padding-right: 10% !important;
     }
 
     /* .marge-md {
@@ -842,13 +846,14 @@ label {
     .bg-xs-menu {
         background-color: #233559;
         padding-left: 2rem !important;
+        padding-right: 2rem !important;
         font-size: 0.9rem !important;
     }
 }
 
 @media only screen and (max-width:991px) {
     .marge-md {
-        min-height: 40%;
+        max-height: 40rem !important;
         padding: 20rem 0rem 5rem 0rem !important;
         background-color: #233559;
         padding-bottom: 1rem;
@@ -943,11 +948,11 @@ nav .nav-item::before {
 @media only screen and (min-width:991px) {
     .container1-md {
         position: relative !important;
-        height: 100vh;
+        height: 100vh !important;
         display: flex !important;
         width: 100%;
-        align-items: flex-end;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: center;
         flex-direction: row;
     }
 
@@ -969,9 +974,8 @@ nav .nav-item::before {
 }
 
 .columnFleche {
-    padding: 3.2% 0rem;
-    width: 4.6rem;
-    height: 4rem;
+    width: 100%;
+    height: 6rem;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
     border-color: #fff;
@@ -1001,7 +1005,7 @@ nav .nav-item::before {
 
 @media only screen and (max-width:991px) {
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 40rem, #eeeeee 40rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 35rem, #eeeeee 35rem);
         background-color: #eeeeee;
         min-height: auto;
     }
@@ -1021,8 +1025,8 @@ nav .nav-item::before {
 
 @media only screen and (max-width:991px) {
     .barre-bas {
-        bottom: 30px !important;
-        margin-bottom: 3rem;
+        /* bottom: 30px !important */
+        /* margin-bottom: 3rem */
     }
 
     contentOverflow {
@@ -1100,7 +1104,12 @@ HEAD.slide2 sub,
     }
 
     .columnFleche {
-        padding: 4.2% 0;
+        /* width: 100vw */
+        height: 4rem;
+        border-style: solid;
+        border-width: 0 1px 0 0;
+
+        /* padding: 4.2% 0 */
     }
 }
 
@@ -1168,8 +1177,7 @@ HEAD.slide2 sub,
 
 @media only screen and (max-width:551px) {
     .columnFleche {
-        padding: 2% 0;
-        width: 2.5rem;
+        /* width: 2.5rem */
         align-items: center;
         justify-content: center;
         display: flex;
@@ -1180,7 +1188,7 @@ HEAD.slide2 sub,
     }
 
     .backgroundMobile {
-        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 30rem, #eeeeee 30rem);
+        background: -webkit-linear-gradient(270deg, rgb(35, 53, 89) 26rem, #eeeeee 26rem);
     }
 
     .logo-image {
@@ -1204,11 +1212,11 @@ h2 {
 
 @media only screen and (max-width:979px) {
     .padding p {
-        max-width: 80% !important;
+        max-width: 95% !important;
     }
 
     .hvr-forward img {
-        width: 80% !important;
+        width: 90% !important;
         align-items: left !important;
     }
 }
@@ -1250,6 +1258,7 @@ h2 {
 }
 
 a {
+    cursor: pointer;
     color: #002EA5;
 }
 
@@ -1282,5 +1291,13 @@ a {
         display: flex;
         min-height: 40vh;
         align-items: flex-end;
+    }
+}
+
+@media only screen and (max-width:992px) {
+    .slide2 p,
+    HEAD.slide2 sub,
+    .slide3 li {
+        line-height: 1.7em;
     }
 }
